# jfbterm-0.4.7.1

./: INSTALL.en  INSTALL.ja  Makefile.am  README.ja  README.md  acconfig.h  autogen.sh  config.h.in  configure.ac  configure.in  csv.c  csv.h  fbcommon.c  fbcommon.h  fbdpsp.c  fbdpsp.h  fbdpsp32.c  fbdpsp32.h  font.c  font.h  getcap.c  getcap.h  indextbl.c  indextbl.h  jfbterm.conf  jfbterm.conf.sample.ja  jfbterm.conf.sample.mplus_j12r  jfbterm.conf.sample.unifont  main.c  main.h  message.c  message.h  p  pcf.c  pcf.h  pen-h.hs  pen.c  pen.h  picofont.c  picofont.h  (+11 more)
JFBTerm/: FBCommon.hs  Pen.hs  PenFFI.hs  SkipAgent.hs  Term.hs  TermFFI.hs  Util.hs  UtilFFI.hs  VTerm.hs  VTermFFI.hs  VTermLow.hs  VTermLowFFI.hs
